# zeromq

./: CMakeLists.txt  LICENSE  README.md  client.cpp  main.cpp
cmake/: Findzmq.cmake
pub_sub/: client.cpp  server.cpp
req_reply/: CMakeLists.txt  server.cpp
scripts/: build.sh  setup_dependencies.sh
